--- a/application/modules/backend/views/scripts/index/index.phtml
+++ b/application/modules/backend/views/scripts/index/index.phtml
@@ -24,9 +24,10 @@
 <style type="text/css">
   table.tablestati{
     display: block;  
-    background-color: #ccc;  
-    clear: both;
+    background-color: #ccc;      
     margin-top:40px;
+    float: left;
+    margin-left: 20px;
   }
 
   table.tablestati thead td{
@@ -42,6 +43,26 @@ table.tablestati td.number{
       width: 80px;
       padding-right: 10px;
   }
+
+  path { 
+    stroke: steelblue;
+    stroke-width: 2;
+    fill: none;
+}
+
+.axis path,
+.axis line {
+    fill: none;
+    stroke: grey;
+    stroke-width: 1;
+    shape-rendering: crispEdges;
+}
+
+.legend {
+    font-size: 16px;
+    font-weight: bold;
+    text-anchor: middle;
+}
 </style>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
@@ -51,6 +72,11 @@ table.tablestati td.number{
 <div class="pling-nav-tabs">
 <ul class="nav nav-tabs ">
  <li class="active"><a class="newuserprojectTab" href="#d3-line" data-toggle="tab">New Members & Projects </a></li>
+ <li ><a class="downloadsdailyTab" href="#downloadsdailyTab" data-toggle="tab">Downloads&Payouts daily</a></li>
+ 
+ <li ><a class="downloadsundpayoutsdailyTab" href="#downloadsundpayoutsdailyTab" data-toggle="tab">Downloads vs Payouts daily</a></li> 
+ 
+ <li ><a class="topDownloadsPerDayTab" href="#topDownloadsPerDayTab" data-toggle="tab">Top Download/Day</a></li>
  <li ><a class="payoutTab" href="#payoutTab" data-toggle="tab">Payout</a></li> 
  <li ><a class="payoutNewcomerTab" href="#payoutNewcomerTab" data-toggle="tab">Payout Newcomer</a></li> 
  <li ><a class="payoutNewloserTab" href="#payoutNewloserTab" data-toggle="tab">Payout Newloser</a></li> 
@@ -67,6 +93,38 @@ table.tablestati td.number{
         <div id='d3linelableinline'></div>
         
     </div>
+  </div>
+
+  <div id="downloadsdailyTab" class="tab-pane">
+  <span style="float: left">#number of months back</span>
+     <select id="numofmonthback" style="float: left">
+       <option>2</option>
+       <option selected>3</option>
+       <option>4</option>
+       <option>5</option>
+       <option>6</option>
+       <option>7</option>
+       <option>8</option>
+       <option>9</option>
+       <option>10</option>
+       <option>11</option>
+       <option>12</option>
+     </select>
+     <div id="downloadsdailyTabContainer"></div>
+  </div>
+
+   <div id="downloadsundpayoutsdailyTab" class="tab-pane ">               
+        <div id="downloadsundpayoutsdailyTabContainer"></div>                
+  </div>
+
+   <div id="topDownloadsPerDayTab" class="tab-pane ">        
+        <div>
+            <input  name="filterTopDownloadsDate" id="filterTopDownloadsDate" value="<?php echo date("Y-m-j") ?>"></input>
+            <button class="filterTopDownloadsDate">go!</button>
+            <button class="filterTopDownloadsDateClear">clear!</button>
+      
+        </div>
+        <div id="topDownloadsPerDayTabContainer"></div>                
   </div>
 
    <div id="payoutTab" class="tab-pane ">
@@ -102,7 +160,7 @@ table.tablestati td.number{
               
               function createMonthFilter(selectid,triggerEvent){
                   let html = '<select id="'+selectid+'" style="float: left;">';       
-                  for(i = 1; i<5; i++){
+                  for(i = 1; i<10; i++){
                     let oneMonthsAgo = moment().subtract(i, 'months');
                     if(i==1){
                           html = html +'<option selected>'+oneMonthsAgo.format('YYYYMM')+'</option>';    
@@ -114,6 +172,19 @@ table.tablestati td.number{
                   return html;
               }
              
+              function createMonthFilterWithCurrent(selectid,triggerEvent){
+                  let html = '<select id="'+selectid+'" style="float: left;">';       
+                  for(i = 0; i<10; i++){
+                    let oneMonthsAgo = moment().subtract(i, 'months');
+                    if(i==0){
+                          html = html +'<option selected>'+oneMonthsAgo.format('YYYYMM')+'</option>';    
+                    }else{
+                          html = html +'<option>'+oneMonthsAgo.format('YYYYMM')+'</option>';
+                    }
+                  }                          
+                  html = html +'</select>';                                                    
+                  return html;
+              }
 
              $.ajaxSetup ({
                  // Disable caching of AJAX responses
@@ -127,6 +198,53 @@ table.tablestati td.number{
              });
        
             
+            $(".downloadsdailyTab").click(function() {
+                $('#downloadsdailyTabContainer').empty();
+                $.getScript("/theme/flatui/js/stati/downloadsdaily.js");                
+            });
+           $('#numofmonthback').change(function() {                                     
+                 $.getScript("/theme/flatui/js/stati/downloadsdaily.js");               
+            });
+            
+           // downloads & payouts daily
+           
+           $('#downloadsundpayoutsdailyTab').prepend(createMonthFilterWithCurrent('selectmonthdownloadsundpayoutdaily'));
+            $('#selectmonthdownloadsundpayoutdaily').change(function() {                                     
+                  $.getScript("/theme/flatui/js/stati/downloadsundpayoutsdaily.js");               
+             });
+           $(".downloadsundpayoutsdailyTab").click(function() {
+               $('#downloadsundpayoutsdailyTabContainer').empty();               
+               $.getScript("/theme/flatui/js/stati/downloadsundpayoutsdaily.js");
+           });
+          
+
+
+        // topdownloadsperdate           
+               
+            $('button.filterTopDownloadsDate').click(function() {                                                       
+                    loadTopdownloadsperday();
+               });
+            $('button.filterTopDownloadsDateClear').click(function() {                                                       
+                    $('#topDownloadsPerDayTabContainer').empty();
+               });
+
+            function loadTopdownloadsperday(){
+                let date = $( "#filterTopDownloadsDate" ).val();               
+                $.getJSON( "/backend/index/gettopdownloadsperdate?date="+date, function( response ) {
+                     let data = response.results;
+                      let table = "<table class='tablestati'><thead><tr><td colspan='2'>"+date+"</td></tr><tr><td>ProjectID</td><td class='number'>CNT</td></thead>";
+                      $.each( data, function( index, value ){
+                            table = table+'<tr><td><a target="_blank" href="https://opendesktop.org/p/'+value.project_id+'">'+value.project_id+'</a></td><td class="number">'+value.cnt+'</td></tr>';
+                      });      
+                     table = table +"</table>";                                              
+                      $('#topDownloadsPerDayTabContainer').append(table);                        
+                });  
+            }
+              $(".topDownloadsPerDayTab").click(function() {                  
+                   $('#topDownloadsPerDayTabContainer').empty();
+                  loadTopdownloadsperday();
+              });
+
             $('#payoutTab').prepend(createMonthFilter('selectmonth'));
              $('#selectmonth').change(function() {                                     
                    $.getScript("/theme/flatui/js/stati/memberPayout.js");               
