--- a/application/modules/default/views/scripts/user/partials/loopPlings.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPlings.phtml
@@ -163,7 +163,7 @@ if ($this->countDownloadsOverall > 0) {
                         <span><?= $product['num_downloads'] ?></span>
                     </div>
                     <div class="col-md-2 text-right cell-default">
-                        <span><?= round($product['dl_pling_factor'],0) ?></span>
+                        <span><?= $product['dl_pling_factor'] ?></span>
                     </div>
                     <?php /*
                     <div class="col-md-2 text-right cell-default">
