--- a/application/modules/default/views/scripts/product/partials/details.phtml
+++ b/application/modules/default/views/scripts/product/partials/details.phtml
@@ -104,13 +104,16 @@ $userRoleName = $helperUserRole->userRole();
 
         <div style="clear: both" class="small">(remember the cache) after you change some value below and refresh the page you may encounter some differences to your changes</div>
         <span class="page-views ">
-          <input type="checkbox" id="feature-this-checkbox" <?php echo $this->product->featured == 1 ? ' checked ' : ''; ?> />  featured
+          <input type="checkbox" id="feature-this-checkbox" <?php echo $this->product->featured == 1 ? ' checked=\'checked\' ' : ''; ?> />  featured
         </span>
         <span class="page-views ">
-            <input type="checkbox" id="approve-this-checkbox" <?php echo $this->product->approved == 1 ? ' checked ' : ''; ?> />  approved
+            <input type="checkbox" id="approve-this-checkbox" <?php echo $this->product->approved == 1 ? ' checked=\'checked\' ' : ''; ?> />  approved
         </span>
         <span class="page-views ">
-            <input type="checkbox" id="spam-checked-checkbox" <?php echo $this->product->spam_checked == 1 ? ' checked ' : ''; ?> />  spam checked
+            <input type="checkbox" id="spam-checked-checkbox" <?php echo $this->product->spam_checked == 1 ? ' checked=\'checked\' ' : ''; ?> />  spam checked
+        </span>
+        <span class="page-views " style="color: red;">
+            <input type="checkbox" id="pling-excluded-checkbox" <?php echo $this->product->pling_excluded == 1 ? ' checked=\'checked\' ' : ''; ?> />  pling-excluded
         </span>
 
         <script>
@@ -216,6 +219,39 @@ $userRoleName = $helperUserRole->userRole();
                         } else {
                             alert('Project set approved successfully');
                             $('#approve-this-checkbox').prop("checked", true);
+
+                        }
+
+                    },
+                    error: function () {
+                        alert('Service is temporarily unavailable.');
+                    }
+                });
+
+                return false;
+            });
+            
+            
+            $('#pling-excluded-checkbox').on('click', function (event) {
+                event.stopPropagation();
+                var status = 0;
+                if (this.checked) {
+                    status = 1;
+                } else {
+                    status = 0;
+                }
+
+                var target = "/backend/project/doexclude?project_id=<?= $this->product->project_id ?>&pling_excluded=" + status;
+                $.ajax({
+                    url: target,
+                    success: function (results) {
+                        if (status == 0) {
+                            alert('Project was successfully included for plinging');
+                            $('#pling-excluded-checkbox').prop("checked", false);
+
+                        } else {
+                            alert('Project was successfully excluded for plinging');
+                            $('#pling-excluded-checkbox').prop("checked", true);
 
                         }
 
