--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -504,7 +504,7 @@ if (Zend_Auth::getInstance()->hasIdentity()){
 
 <script>
     (function (collection_id) {
-        if (0 === parseInt(collection_id)) {
+        if (!collection_id) {
             return;
         }
         $.ajax({
