updated project files information
(cherry picked from commit e5b419dddb6d0bf471839104ebc06bf022bd328f)

--- a/application/modules/default/views/scripts/product/partials/details.phtml
+++ b/application/modules/default/views/scripts/product/partials/details.phtml
@@ -314,7 +314,7 @@ $userRoleName = $helperUserRole->userRole();
                     if (response_data.status === 'success') {
                         var files = response_data.files;
                         $.each(files, function(index, data_file) {
-                            amount += data_file.downloaded_timeperiod_count;
+                            amount += parseInt(data_file.downloaded_timeperiod_count);
                         });
                         $('#downloadscnt').empty().append(amount);
                     }
