--- a/application/modules/default/views/layout/home_template.phtml
+++ b/application/modules/default/views/layout/home_template.phtml
@@ -42,6 +42,10 @@
     <link href="/theme/flatui/css/colorbox.css" media="screen" rel="stylesheet" type="text/css"/>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 
+    <!-- New style Haris -->
+    <link rel="stylesheet" href="/theme/flatui/css/index-page.css">
+    <link rel="stylesheet" href="/theme/flatui/css/products-page.css">    
+    
     <link rel="shortcut icon" type="image/x-icon" href="<?=$this->template['favicon']?>"/>
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
