--- a/application/modules/backend/views/scripts/index/index.phtml
+++ b/application/modules/backend/views/scripts/index/index.phtml
@@ -232,9 +232,15 @@ table.tablestati td.number{
                 let date = $( "#filterTopDownloadsDate" ).val();               
                 $.getJSON( "/backend/index/gettopdownloadsperdate?date="+date, function( response ) {
                      let data = response.results;
-                      let table = "<table class='tablestati'><thead><tr><td colspan='2'>"+date+"</td></tr><tr><td>ProjectID</td><td class='number'>CNT</td></thead>";
+                      let table = "<table class='tablestati'><thead><tr><td colspan='2'>"+date+"</td></tr><tr><td>ProjectID</td><td class='number'>CNT</td><td>Title</td><td>Category</td><td>created_at</td></thead>";
                       $.each( data, function( index, value ){
-                            table = table+'<tr><td><a target="_blank" href="https://opendesktop.org/p/'+value.project_id+'">'+value.project_id+'</a></td><td class="number">'+value.cnt+'</td></tr>';
+                            table = table+'<tr>'
+                            +'<td><a target="_blank" href="https://opendesktop.org/p/'+value.project_id+'">'+value.project_id+'</a></td>'
+                            +'<td class="number">'+value.cnt+'</td>'
+                            +'<td>'+value.ptitle+'</td>'
+                            +'<td>'+value.ctitle+'</td>'
+                            +'<td>'+value.pcreated_at+'</td>'
+                            +'</tr>';
                       });      
                      table = table +"</table>";                                              
                       $('#topDownloadsPerDayTabContainer').append(table);                        
