--- a/application/modules/backend/views/scripts/index/index.phtml
+++ b/application/modules/backend/views/scripts/index/index.phtml
@@ -118,13 +118,13 @@ table.tablestati td.number{
   </div>
 
    <div id="topDownloadsPerDayTab" class="tab-pane ">        
-        <div>
+        <div style="display: block; clear: both">
             <input  name="filterTopDownloadsDate" id="filterTopDownloadsDate" value="<?php echo date("Y-m-j") ?>"></input>
             <button class="filterTopDownloadsDate">go!</button>
             <button class="filterTopDownloadsDateClear">clear!</button>
       
         </div>
-        <div id="topDownloadsPerDayTabContainer"></div>                
+        <div id="topDownloadsPerDayTabContainer" style="display: block;"></div>                
   </div>
 
    <div id="payoutTab" class="tab-pane ">
