--- a/application/modules/backend/views/scripts/index/index.phtml
+++ b/application/modules/backend/views/scripts/index/index.phtml
@@ -124,7 +124,7 @@ table.tablestati td.number{
             <button class="filterTopDownloadsDateClear">clear!</button>
       
         </div>
-        <div id="topDownloadsPerDayTabContainer" style="display: block;"></div>                
+        <div id="topDownloadsPerDayTabContainer" style="display: block;clear: left"></div>                
   </div>
 
    <div id="payoutTab" class="tab-pane ">
