--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -219,19 +219,23 @@
 
                                     count_downloads = this.downloaded_count || 0;
                                     downloaded_count_total = downloaded_count_total+parseInt(count_downloads);
+                                    
+                                    //downloadlink is now: domain/api/files/download/id/ID/s/TOKEN/t/TIMESTAMP/FILE_NAME
+                                    var hash = '<?= $this->download_hash ?>';
+                                    var timetamp = '<?= $this->download_timestamp ?>';
 
-                                     var downloadUrl = pploadApiUri + 'files/download/id/' + this.id + '/' + this.name;
-                                     var downloadLink = '<a href="' + downloadUrl + '" id="data-link' + this.id + '">' + this.name + '</a>';
+                                    var downloadUrl = pploadApiUri + 'files/downloadfile/id/' + this.id + '/s/' + hash + '/t/' + timetamp + '/' + this.name;
+                                    var downloadLink = '<a href="' + downloadUrl + '" id="data-link' + this.id + '">' + this.name + '</a>';
 
-                                     if(this.active == '0') {
-                                    	 downloadLink = this.name;
-                                     }
-                                     var link = '';
+                                    if(this.active == '0') {
+                                        downloadLink = this.name;
+                                    }
+                                    var link = '';
 
-                                     var fileDescription = '';
-                                     if (this.description) {
-                                         fileDescription = this.description;
-                                     }
+                                    var fileDescription = '';
+                                    if (this.description) {
+                                        fileDescription = this.description;
+                                    }
                                      var licenseId = '';
                                      var license = '';
                                      var packagetypeId = '';
