index become supporter

--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -94,10 +94,15 @@ $time_start = microtime(true);
                       <div class="downloadDiv" >
                           <a href="https://www.linux-apps.com/p/1175480/" target="_blank"><img src="/images/system/download-app.png" /></a>
                       </div>
-              
+
                       <?php if(Zend_Auth::getInstance()->hasIdentity() AND Zend_Auth::getInstance()->getIdentity()->roleName == 'admin')  : ?>
                       <div class="donateDiv" >
+                      <?php 
+                                $identity = Zend_Auth::getInstance()->getIdentity();
+                                if(!$this->isSupporter($identity->member_id)) {                                                  
+                       ?>
                           <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Become a Supporter</a>
+                          <?php }?>
                       </div>
                       <?php endif; ?>
                       
