--- a/application/modules/default/views/layout/flat_ui_template.phtml
+++ b/application/modules/default/views/layout/flat_ui_template.phtml
@@ -156,6 +156,23 @@ echo $this->render('partials/propagateLogout.phtml');
         ga('send', 'pageview');
 
     </script>
+    
+    
+    <!-- Piwik -->
+    <script type="text/javascript">
+      var _paq = _paq || [];
+      /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+      _paq.push(['trackPageView']);
+      _paq.push(['enableLinkTracking']);
+      (function() {
+        var u="//piwik.opendesktop.org/";
+        _paq.push(['setTrackerUrl', u+'piwik.php']);
+        _paq.push(['setSiteId', '1']);
+        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+        g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+      })();
+    </script>
+    <!-- End Piwik Code -->
 <?php } ?>
 <?php
  echo $this->render('partials/profiler.phtml')
