--- a/application/modules/default/views/layout/static_content.phtml
+++ b/application/modules/default/views/layout/static_content.phtml
@@ -60,6 +60,29 @@
         ga('send', 'pageview');
 
     </script>
+    
+    <!-- Piwik -->
+    <?php
+    $piwikid ='1';
+    if($domainconfig)
+    {
+        $piwikid = $domainconfig['piwik_id'];
+    }
+    ?>
+    <script type="text/javascript">
+      var _paq = _paq || [];
+      /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+      _paq.push(['trackPageView']);
+      _paq.push(['enableLinkTracking']);
+      (function() {
+        var u="//188.166.165.172/";
+        _paq.push(['setTrackerUrl', u+'piwik.php']);
+        _paq.push(['setSiteId', '<?= $piwikid ?>']);
+        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+        g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+      })();
+    </script>
+    <!-- End Piwik Code -->
 <?php } ?>
 </body>
 </html>
